2010-07-07
    * smfplayer renamed as guiplayer, with a new windows layout and
      supporting Cakewalk WRK files playback
    * release 0.4.0
    
2010-07-03
    * subdirectory "tests" renamed as "utils".
    * visibility attribute for public classes.
    
2010-06-10
    * Compile fix for 0.3.2
    * release 0.3.2a

2010-06-09
    * Command line arguments for all the utilities/test programs.

2010-05-28
    * fix a crash in drumstick-sysinfo when a timer module is not loaded. 
    
2010-05-13
    * Man pages for the utilities/test programs.

2010-05-10
    * New test program: DrumGrid

2010-04-19
    * Release 0.3.1
    * Allow to build drumstick-file library under Windows
    * New method MidiClient::parseAddress() replacing the ALSA function 
      snd_seq_parse_address() in MidiPort::subscribeTo() and similar methods.
    * Fixed MidiClient::getAvailableInputs() and getAvailableOutputs() forcing 
      to always retrieve the clients list.

2010-03-09
    * Release 0.3.0
    * API changes:
      SequencerEvent::isChannel() returns true for SND_SEQ_EVENT_NOTE 
      QueueTimer::setId(const TimerId& id) new method overload
      Timer::bestGlobalTimerId() new static function
      getRuntimeALSALibraryVersion() new global function
      getRuntimeALSALibraryNumber() new global function
      getRuntimeALSADriverVersion() new global function
      getRuntimeALSADriverNumber() new global function
    
2010-03-02
    * New class QWrk, for reading Cakewalk files

2010-02-17
    * Split: drumstick-file and drumstick-alsa 

2010-01-07
    * Renamed to 'drumstick' and moved to a new project repository 

2009-12-27
    * Release 0.2.0
    * API changes:
      SequencerInputThread::start() added a priority parameter
      SequencerEvent::isChannel() new static method
      SequencerOutputThread::stopped() method removed, converted into a signal
      SequencerOutputThread::start() added a priority parameter
      SequencerOutputThread::shutupSound() method removed